src/styles.css
/* ... */
/* SHARING INFO */
/* ------------------------------------------------------- */
.sharing-info h2 {
  font-weight: bold;
  margin: 0;
}

.sharing-info p {
  font-size: 120%;
}

.sharing-links {
  margin-top: 4rem;
}

/* SOCIAL BUTTON CSS */
/* ------------------------------------------------------- */
.prose .share-btn {
  display: inline-block;
  color: var(--purple);
  border: 1px solid var(--purple);
  padding: 0.2em 0.8em;
  text-decoration: none;
  outline: none;
  text-align: center;
  margin: 0 0.2em;
  transition: all 200ms ease-out;
}

.share-btn:focus,
.share-btn:hover {
  color: var(--blue);
  border: 1px solid var(--green);
  text-decoration: none;
  opacity: 0.8;
}

.share-btn:active {
  color: #e2e2e2;
}

/* FINANCE */
/* ------------------------------------------------------- */
.finance {
  background: var(--white);
}

.finance > ul {
  display: flex;
  flex-wrap: wrap;
  gap: 10rem;
}

.finance > ul > li {
  display: flex;
  flex-direction: column;
  font-size: 3.5rem;
  color: var(--gray-700);
  gap: 4rem;
}

.finance > ul > li img {
  height: 10rem;
}

/* CREDITS */
/* ------------------------------------------------------- */
.credits {
  background: var(--gray-50);
}

.credits .container {
  padding-top: 6rem;
  padding-bottom: 6rem;
  color: var(--gray-500);
  font-size: 3.5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.credits .links {
  display: flex;
  flex-wrap: wrap;
  gap: 4rem;
}

.credits a {
  color: var(--gray-500);
}

.credits a:hover {
  color: var(--blue);
}

/* CHARTS */
/* ------------------------------------------------------- */
/* CHART 1 */
/* ------------------------------------------------------- */
.chart1-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 8px;
  padding: 10rem 8rem;
  position: relative;
  margin: 0 auto;
  max-width: var(--content-max-width);
}

@media screen and (min-width: 640px) {
  .chart1-container {
    padding: 12rem 10rem;
  }
}

@media screen and (min-width: 900px) {
  .chart1-container {
    padding: 14rem 16rem;
  }
}

@media screen and (min-width: 1024px) {
  .chart1-container {
    padding: 16rem 20rem;
  }
}

.chart1-container > ul {
  max-width: 200px;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  font-size: 3.5rem;
  justify-content: center;
}

.chart1-container > ul > li {
  padding-left: 6rem;
  position: relative;
}

.chart1-container > ul > li > span {
  position: absolute;
  left: 0;
  top: 0;
  width: 4rem;
  height: 4rem;
  border-radius: 3px;
  display: inline-block;
  background: var(--data-color);
}

